# stmstudy

./: .gitignore  OLED_Display_Technical_Document.md  ring_buffer_upgrade.md
User/: beep.c  beep.h  bitToled.c  debug.c  debug.h  delay.c  delay.h  gpio.c  gpio.h  hardware_def.h  htim.c  htim.h  key.c  key.h  led.c  led.h  main.c  main_final.c  music.c  music.h  nnnn.md  nnnn_examples.c  simple_pedometer.c  simple_pedometer.h  stm32f4xx_it.c  stm32f4xx_it.h  sys.h  timer_general.c  timer_general.h  uart_dma.c  uart_dma.h  watch_main.c
User/MPU6050/: MPU6050.c  MPU6050.h
User/MPU6050/eMPL/: inv_mpu.c  inv_mpu.h  inv_mpu_dmp_motion_driver.c
User/OLED/: bagua.c  bagua.h  logo.c  logo.h  oled.c  oled.h  oled_print.c  oled_print.h  oledfont.h
User/OLED/simulator/: .gitignore  Makefile  config.h.in
User/OLED/simulator/examples/: basic_usage.c
User/OLED/simulator/src/: oled_simulator.c  oled_simulator_enhanced.c  simple_test_image.c
User/OLED/模拟器/: .gitignore  CMakeLists.txt  README.md  oled_simulator  oled_simulator.c  simple_test_image
User/OLED/模拟器/include/: logo.h
User/OLED/模拟器/src/: oled_simulator.c  oled_simulator_enhanced.c
User/code/: adc.c  adc.h  led.c  led.h  nnnn_examples.c  nnnn_examples.h  rtc_date.c  rtc_date.h  soft_i2c.c  soft_i2c.h  spi.c  spi.h  sys.h  uart_dma.c  uart_dma.h
User/key/: key.c  key.h
User/myInit/: myInit.c  myInit.h
User/ui/: 2048_oled.c  2048_oled.h  TandH.c  TandH.h  alarm_menu.c  alarm_menu.h  bell.c  bell.h  flashlight.c  flashlight.h  setting.c  step.c  step.h  stopwatch.c  stopwatch.h  testlist.c  testlist.h  ui.h
